<resources>
    <string name="iot_app_name">TXIoTDemo</string>
    <string name="iot_nick">昵称</string>
    <string name="iot_logout">退出登录</string>
    <string name="iot_back">返回</string>
    <string name="iot_qr_code_scanner">二维码扫描</string>
    <string name="iot_scan_qr_code_hint">将二维码放入框内，即可自动扫描</string>
    <string name="iot_login_success">登录成功</string>
    <string name="iot_login_failure">登录失败：%s</string>
    <string name="iot_refresh_failed">刷新失败：%s</string>
    <string name="iot_device_unbind_success">设备解绑成功</string>
    <string name="iot_device_unbind_failed">解绑失败：%s</string>
    <string name="iot_device_status_online">在线</string>
    <string name="iot_device_status_offline">离线</string>
    <string name="iot_family_default_name">🏠 我的家</string>
    <string name="iot_family_current_label">当前：%s</string>
    <string name="iot_family_select_title">🏠 选择家庭</string>
    <string name="iot_family_unnamed">未命名</string>
    <string name="iot_family_get_list_failed">获取家庭列表失败：%s</string>
    <string name="iot_family_create_failed">创建家庭失败：%s</string>
    <string name="iot_family_manage_title">🏠 家庭管理</string>
    <string name="iot_family_menu_rename">修改家庭名称</string>
    <string name="iot_family_menu_create">新建家庭</string>
    <string name="iot_family_menu_rooms">🚪 管理房间</string>
    <string name="iot_family_menu_members">👥 管理成员</string>
    <string name="iot_family_menu_delete">删除当前家庭</string>
    <string name="iot_family_rename_title">✏️ 修改家庭名称</string>
    <string name="iot_family_rename_hint">请输入家庭名称</string>
    <string name="iot_family_rename_success">家庭名称已更新</string>
    <string name="iot_family_rename_failed">更新失败：%s</string>
    <string name="iot_family_create_title">🏠 新建家庭</string>
    <string name="iot_family_create_hint">请输入家庭名称</string>
    <string name="iot_family_create_success">家庭「%s」创建成功</string>
    <string name="iot_family_delete_title">🗑️ 删除家庭</string>
    <string name="iot_family_delete_message">确定要删除「%s」吗？\n删除后家庭内所有数据将无法恢复</string>
    <string name="iot_family_delete_success">家庭已删除</string>
    <string name="iot_family_delete_failed">删除失败：%s</string>
    <string name="iot_btn_create">创建</string>
    <string name="iot_btn_delete">删除</string>
    <string name="iot_btn_confirm">确定</string>
    <string name="iot_btn_cancel">取消</string>
    <string name="iot_btn_invite">邀请</string>
    <string name="iot_room_manage_title">房间管理</string>
    <string name="iot_room_count_label">共 %d 个房间</string>
    <string name="iot_room_add_item">新建房间</string>
    <string name="iot_room_get_list_failed">获取房间列表失败：%s</string>
    <string name="iot_room_create_title">新建房间</string>
    <string name="iot_room_create_hint">请输入房间名称</string>
    <string name="iot_room_create_success">房间「%s」创建成功</string>
    <string name="iot_room_create_failed">创建房间失败：%s</string>
    <string name="iot_room_options_default_title">房间操作</string>
    <string name="iot_room_menu_rename">重命名</string>
    <string name="iot_room_menu_delete">删除房间</string>
    <string name="iot_room_rename_title">重命名房间</string>
    <string name="iot_room_rename_hint">请输入房间名称</string>
    <string name="iot_room_rename_success">房间名称已更新为：%s</string>
    <string name="iot_room_rename_failed">修改失败：%s</string>
    <string name="iot_room_delete_title">删除房间</string>
    <string name="iot_room_delete_message">确定要删除「%s」吗？</string>
    <string name="iot_room_delete_success">房间已删除</string>
    <string name="iot_room_delete_failed">删除失败：%s</string>
    <string name="iot_member_manage_title">👥 成员管理</string>
    <string name="iot_member_count_label">共 %d 位成员</string>
    <string name="iot_member_add_item">👤＋ 邀请成员</string>
    <string name="iot_member_get_list_failed">获取成员列表失败：%s</string>
    <string name="iot_member_role_admin">管理员</string>
    <string name="iot_member_role_normal">成员</string>
    <string name="iot_member_invite_title">👤＋ 邀请成员</string>
    <string name="iot_member_invite_hint">请输入用户 ID</string>
    <string name="iot_member_invite_as_normal">邀请为普通成员</string>
    <string name="iot_member_invite_as_admin">邀请为管理员</string>
    <string name="iot_member_invite_success">已邀请用户 %1$s（%2$s）</string>
    <string name="iot_member_invite_failed">邀请失败：%s</string>
    <string name="iot_member_remove_title">👤 移出成员</string>
    <string name="iot_member_remove_message">确定要将「%s」移出家庭吗？</string>
    <string name="iot_member_remove_btn">移出</string>
    <string name="iot_member_remove_success">成员已移出家庭</string>
    <string name="iot_member_remove_failed">删除失败：%s</string>
    <string name="iot_family_menu_leave">退出当前家庭</string>
    <string name="iot_family_leave_title">🚪 退出家庭</string>
    <string name="iot_family_leave_message">确定要退出当前家庭吗？退出后您将不再是该家庭的成员。</string>
    <string name="iot_family_leave_success">已退出家庭</string>
    <string name="iot_family_leave_failed">退出失败：%s</string>
    <string name="iot_member_invite_token_title">家庭邀请码</string>
    <string name="iot_member_invite_token_message">邀请码：%s\n\n请将此邀请码发送给对方，对方可通过「加入家庭」功能输入邀请码加入</string>
    <string name="iot_member_invite_token_failed">生成邀请码失败：%s</string>
    <string name="iot_member_join_family_item">🔗 通过邀请码加入家庭</string>
    <string name="iot_member_join_family_title">🔗 加入家庭</string>
    <string name="iot_member_join_family_hint">请输入邀请码</string>
    <string name="iot_member_join_family_success">已成功加入家庭</string>
    <string name="iot_member_join_family_failed">加入失败：%s</string>
    <string name="iot_btn_copy">📋 复制</string>
    <string name="iot_share_manage_title">📲 设备分享</string>
    <string name="iot_share_menu_create_token">🔑 生成分享码</string>
    <string name="iot_share_menu_shared_to_me">📥 查看分享给我的设备</string>
    <string name="iot_share_menu_shared_users">👥 查看已分享用户</string>
    <string name="iot_share_menu_revoke">🗑️ 撤销分享</string>
    <string name="iot_share_token_title">设备分享码</string>
    <string name="iot_share_token_message">分享码：%s\n\n请将此分享码发送给对方，对方可通过「绑定分享设备」功能添加此设备</string>
    <string name="iot_share_token_failed">生成分享码失败：%s</string>
    <string name="iot_share_bind_title">🔗 绑定分享设备</string>
    <string name="iot_share_bind_hint">请输入设备分享码</string>
    <string name="iot_share_bind_token_hint">请输入分享 Token</string>
    <string name="iot_share_bind_to_family">绑定到家庭</string>
    <string name="iot_share_bind_success">分享设备绑定成功</string>
    <string name="iot_share_bind_failed">绑定失败：%s</string>
    <string name="iot_share_devices_title">📥 分享给我的设备</string>
    <string name="iot_share_devices_empty">暂无分享给我的设备</string>
    <string name="iot_share_devices_failed">获取失败：%s</string>
    <string name="iot_share_unbind_title">解除绑定</string>
    <string name="iot_share_unbind_message">确定要解除绑定该设备吗？解除后将不再出现在分享给我的列表中。</string>
    <string name="iot_share_unbind_success">已解除绑定</string>
    <string name="iot_share_unbind_failed">解除绑定失败：%s</string>
    <string name="iot_share_users_title">👥 已分享用户</string>
    <string name="iot_share_users_empty">暂无分享用户</string>
    <string name="iot_share_users_failed">获取失败：%s</string>
    <string name="iot_share_remove_user_title">🗑️ 移除分享</string>
    <string name="iot_share_remove_user_message">确定要移除用户「%s」的设备访问权限吗？</string>
    <string name="iot_share_remove_user_success">已移除该用户的分享权限</string>
    <string name="iot_share_remove_user_failed">移除失败：%s</string>
    <string name="iot_room_bind_device_title">将设备移入房间</string>
    <string name="iot_room_unbind_device_title">从房间移出设备</string>
    <string name="iot_room_bind_device_success">设备已移入房间</string>
    <string name="iot_room_bind_device_failed">移入失败：%s</string>
    <string name="iot_room_unbind_device_success">设备已从房间移出</string>
    <string name="iot_room_unbind_device_failed">移出失败：%s</string>
    <string name="iot_room_menu_bind_device">将设备移入此房间</string>
    <string name="iot_room_menu_unbind_device">从房间移出设备</string>
    <string name="iot_room_no_device">暂无设备</string>
    <string name="iot_device_rename_title">✏️ 设备改名</string>
    <string name="iot_device_rename_hint">请输入设备名称</string>
    <string name="iot_device_rename_success">设备名称已更新</string>
    <string name="iot_device_rename_failed">改名失败：%s</string>
    <string name="iot_device_modify_alias_title">修改别名</string>
    <string name="iot_device_modify_alias_hint">请输入设备别名</string>
    <string name="iot_device_modify_alias_success">别名已修改</string>
    <string name="iot_device_modify_alias_failed">修改别名失败：%s</string>
    <string name="iot_channel_select_at_least_one">请至少选择一个通道</string>
    <string name="iot_input_empty_error">名称不能为空</string>
    <string name="iot_channel_select_title">选择视频通道</string>
    <string name="iot_channel_0">通道0</string>
    <string name="iot_channel_1">通道1</string>
    <string name="iot_channel_2">通道2</string>
    <string name="iot_channel_3">通道3</string>
    <string name="iot_channel_select_device_info">设备：%1$s/%2$s</string>
    <string name="iot_login_input_userid">请输入UserId</string>
    <string name="iot_login_input_appkey">请输入AppKey</string>
    <string name="iot_login_input_appsecret">请输入AppSecret</string>
    <string name="iot_login_btn_text">登 录</string>
    <string name="iot_add_device_scan_qr_first">请扫描二维码</string>
    <string name="iot_add_device_select_family_first">请先选择家庭</string>
    <string name="iot_add_device_get_family_mgr_failed">获取家庭管理器失败</string>
    <string name="iot_add_device_no_family_hint">暂无家庭，请先在设备列表创建</string>
    <string name="iot_add_device_loading">正在添加设备…</string>
    <string name="iot_add_device_get_dev_mgr_failed">获取设备管理器失败，请重试</string>
    <string name="iot_add_device_bind_success">绑定到[%s]成功</string>
    <string name="iot_add_device_camera_perm_required">需要相机权限才能扫描二维码</string>
    <string name="iot_add_device_qr_scan_success">二维码扫描成功</string>
    <string name="iot_add_device_qr_scan_failed">二维码扫描失败</string>
    <string name="iot_add_device_btn_adding">添加中…</string>
    <string name="iot_add_device_btn_add">添加设备</string>
    <string name="iot_cloud_device_info_invalid">设备信息无效</string>
    <string name="iot_cloud_no_channel">无通道</string>
    <string name="iot_cloud_channel_n">通道 %d</string>
    <string name="iot_cloud_no_recording_near">该时间点附近无录像</string>
    <string name="iot_cloud_init_failed">云存初始化失败</string>
    <string name="iot_cloud_get_days_failed">获取云存日期失败：%s</string>
    <string name="iot_cloud_get_events_failed">获取云存事件失败：%s</string>
    <string name="iot_cloud_no_snapshot_image">当前抓图暂无可查看的图片</string>
    <string name="iot_cloud_event_face">人脸识别抓拍</string>
    <string name="iot_cloud_event_door">开门状态抓拍</string>
    <string name="iot_cloud_no_playable_video">当前记录暂无可播放的视频</string>
    <string name="iot_cloud_player_not_init">播放器未初始化</string>
    <string name="iot_cloud_play_failed">视频播放失败</string>
    <string name="iot_cloud_play_ended">视频播放结束</string>
    <string name="iot_add_device_scan_qr">扫描二维码</string>
    <string name="iot_add_device_scan_qr_title">扫描设备二维码</string>
    <string name="iot_add_device_or_manual_input">或手动输入</string>
    <string name="iot_add_device_bind_family">🏠 绑定家庭</string>
    <string name="iot_add_device_select_family_hint">请选择家庭</string>
    <string name="iot_switch">切换</string>
    <string name="iot_signature">签名</string>
    <string name="iot_signature_hint">请输入签名</string>
    <string name="iot_message_center">消息中心</string>
    <string name="iot_my_home">我的家</string>
    <string name="iot_manage">管理</string>
    <string name="iot_loading">加载中...</string>
    <string name="iot_more_actions">更多操作</string>
    <string name="iot_member_management">成员管理</string>
    <string name="iot_device_list">设备列表</string>
    <string name="iot_shared_to_me">分享给我</string>
    <string name="iot_message_read">已读</string>
    <string name="iot_device_share_title">设备分享</string>
    <string name="iot_share_device_menu">📲 分享设备</string>
    <string name="iot_share_target_user_label">👤 目标用户 ID</string>
    <string name="iot_share_target_user_hint">请输入目标用户 ID</string>
    <string name="iot_share_now">📲 立即分享</string>
    <string name="iot_menu_call">📞 通话</string>
    <string name="iot_menu_unbind_device">🗑️ 解绑设备</string>
    <string name="iot_menu_share">📲 分享</string>
</resources>